--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -1,97 +1,62 @@
 - title: General Information
   type: map
   contents:
-    - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
-    - name: Languages
-      value: English, German
+    - name: Name
+      value: Hiroki Kuji
+    - name: Affiliation
+      value: Department of Physics, Tokyo University of Science
+    - name: Address
+      value: 1-3 Kagurazaka, Shinjuku, Tokyo 162-8601, Japan
+    - name: Email
+      value: 1225702 [at] ed.tus.ac.jp
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: PhD course in Physics
+      institution: Department of Physics, Graduate School of Science, Tokyo University of Science
+      year: Apr. 2025 - present
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+        - "Supervisor: Prof. Tetsuro Nikuni"
+    - title: Master of Science
+      institution: Department of Physics, Graduate School of Science, Tokyo University of Science
+      year: Apr. 2023 - Mar. 2025
       description:
-        - Description 1.
-        - Description 2.
+        - "Supervisor: Prof. Tetsuro Nikuni"
+        - "Thesis: Proposal for realizing quantum-spin systems on a two-dimensional square lattice with Dzyaloshinskii-Moriya interaction by the Floquet engineering using Rydberg atoms"
+    - title: Bachelor of Science
+      institution: Department of Physics, Faculty of Science, Tokyo University of Science
+      year: Apr. 2019 - Mar. 2023
 
-- title: Experience
+- title: Fellowships and Research Assistantships
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
-      description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
-      description:
-        - Description 1.
-        - Description 2.
+    - title: JASSO's First Type Scholarship for Graduate Students Repayment Waiver (50%)
+      institution: Japan Student Services Organization
+      year:  2025
+    - title: Research Assistant
+      institution: Tokyo University of Science, Tokyo, Japan
+      description: Theoretical research on the development and applications of neutral atom quantum computers and quantum simulators.
+      year: Apr. 2025 – Present
+    - title: Research Assistant
+      institution: Chuo University, Tokyo, Japan
+      description: Theoretical proposals for quantum applications in distributed environments.
+      year: Aug. 2024 – Present
+    - title: Research Assistant
+      institution: Keio University, Kanagawa, Japan
+      description: Quantum–AI hybrid cyber-physical systems, circuit segmentation technology development (NEDO).
+      year: Apr. 2024 – May 2025
 
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
-      description:
-
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
-
-- title: Open Source Projects
-  type: time_table
+- title: Research Interests
+  type: list
   contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
-
-- title: Honors and Awards
-  type: time_table
-  contents:
-    - year: 1921
-      items:
-        - Nobel Prize in Physics
-        - Matteucci Medal
-    - year: 2029
-      items:
-        - Max Planck Medal
-
-- title: Academic Interests
-  type: nested_list
-  contents:
-    - title: Topic 1.
-      items:
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
-      items:
-        - Description 1.
-        - Description 2.
+    - Quantum computation and quantum simulation
+    - Quantum algorithms
+    - Quantum error correction
+    - Quantum information theory
+    - Rydberg atom–based quantum systems
 
 - title: Other Interests
   type: list
   contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+    - <u>Hobbies:</u> fishing, hiking, winter sports, camping, running
